css: fix code so it wraps if necessary

--- a/static/css/lesson.css
+++ b/static/css/lesson.css
@@ -73,6 +73,7 @@ p {
 pre {
 	background: #eee;
 	padding: 0.5em 0.5em;
+	text-wrap-mode: wrap;
 }
 
 h1 {
